<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMC02</string>
    <string name="action_settings">Settings</string>
    <string name="title">Votre indice de masse corporelle</string>
    <string name="prompt_weight">poids :</string>
    <string name="prompt_height">taille :</string>
    <string name="hint_weight">Votre poids en kilogrammes.</string>
    <string name="hint_height">Votre taille en m.</string>
    <string name="mega_func">Méga fonction !</string>
    <string name="clear">Reset</string>
    <string name="calc">Calculer !</string>
    <string name="result">Résultat :</string>
    <string name="tip_title">Conseils</string>
    <string name="tip_default">Calculez votre IMC pour obtenir des conseils alimentaires.</string>
    
    <string name="title_activity_interpretation">Interpretation</string>
    <string name="interp_title">Interprétation de la valeur de l\'IMC</string>
    <string name="interp">Interpréter</string>
    <string name="retour">Retour</string>
    
    <string name="lt165">- de 16.5</string>
    <string name="lt165label">Dénutrition</string>
    <string name="lt165tip">Il faut manger !</string>
    
    <string name="lt185">16.5 à 18.5</string>
    <string name="lt185label">Maigreur</string>
    <string name="lt185tip">Vous pouvez manger plus.</string>
    
    <string name="lt25">18.5 à 25</string>
    <string name="lt25label">Corpulence moyenne</string>
    <string name="lt25tip">Tout va bien !</string>
    
    <string name="lt30">25 à 30</string>
    <string name="lt30label">Surpoids</string>
    <string name="lt30tip">Vous êtes en surpoids.</string>
    
    <string name="lt35">30 à 35</string>
    <string name="lt35label">Obésité modérée</string>
    <string name="lt35tip">Attention à ne pas trop manger..</string>
    
    <string name="lt40">35 à 40</string>
    <string name="lt40label">Obésité sévère</string>
    <string name="lt40tip">Vous devriez consulter un médecin.</string>
    
    <string name="gt40">+ de 40</string>
    <string name="gt40label">Obésité massive</string>
    <string name="gt40tip">Il faut arrêter de manger !</string>

</resources>
